kubernetes/yml/alertmanager.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alertmanager
  labels:
    app: alertmanager  
spec:
  serviceName: "alertmanager-hs"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel  
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      serviceAccountName: alertmanager
      containers:
      - name: alertmanager
        image: prom/alertmanager
        ports:
        - name: alertmgr-port
          containerPort: 9093
        volumeMounts:
        - name: config-volume-alertmanager-yml
          mountPath: /etc/alertmanager/alertmanager.yml
          subPath: alertmanager.yml
      volumes:
        - name: config-volume-alertmanager-yml
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: alertmanager-config-alertmanager.yml	
          
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-cs
  labels:
    app: alertmanager
spec:
  type: NodePort
  ports:
  - port: 9093
    targetPort: 9093
    name: client
  selector:
    app: alertmanager
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-hs
  labels:
    app: alertmanager
spec:
  ports:
  - port: 9093
    name: server
  clusterIP: None
  selector:
    app: alertmanager
---
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-ingress
spec:
  rules:
  - host: alertmanager
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-hs
          servicePort: 9093
